k8s_templates/02-drone-agent.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
    name: drone-agent
    namespace: drone
spec:
  selector:
    matchLabels:
      app: drone-agent
  replicas: 1
  template:
    metadata:
      labels:
        app: drone-agent
    spec:
      containers:
        - name: drone-agent
          image: drone/agent:${drone_tag}
          args: ["agent"]
          volumeMounts:
            - mountPath: /var/run/docker.sock
              name: docker-socket
      volumes:
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
