k8s_templates/02-drone.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: drone
  namespace: drone
spec:
  selector:
      matchLabels:
        app: drone
  replicas: 1
  template:
    metadata:
      labels:
        app: drone
    spec:
      containers:
        - name: drone
          image: drone/drone:${drone_tag}
          ports:
            - name: http
              containerPort: 80
            - name: agent
              containerPort: 9000
${sqlite_volume_partial}
